--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Environment Config
 
-MONGOLAB_URI=mongodb+srv://StevenPennyLerner:Desdenova0@cluster0-hdbvn.mongodb.net/test?retryWrites=true&w=majority
+MONGOLAB_URI=mongodb+srv://StevenPennyLerner:Steven0!@cluster0-hdbvn.mongodb.net/test?retryWrites=true&w=majority
